--- a/bt5/erp5_l10n_fr/MessageTranslationTemplateItem/fr/erp5_ui/translation.po
+++ b/bt5/erp5_l10n_fr/MessageTranslationTemplateItem/fr/erp5_ui/translation.po
@@ -2138,7 +2138,7 @@ msgid "Cancelled [state in task_workflow]"
 msgstr "Annulé"
 
 msgid "Cancelled [state in ticket_workflow]"
-msgstr "Annulé"
+msgstr "Annulée"
 
 msgid "Cancelled."
 msgstr "Annulé."
@@ -2624,7 +2624,7 @@ msgid "Closed [state in project_workflow]"
 msgstr "Clôturé"
 
 msgid "Closed [state in ticket_workflow]"
-msgstr "Clôturé"
+msgstr "Fermée"
 
 msgid "Closing Balance"
 msgstr "Soldes finaux"
@@ -3980,7 +3980,7 @@ msgid "Deleted [state in task_workflow]"
 msgstr "Supprimé"
 
 msgid "Deleted [state in ticket_workflow]"
-msgstr "Supprimé"
+msgstr "Supprimée"
 
 msgid "Deleted [state in validation_workflow]"
 msgstr "Supprimé"
@@ -7958,13 +7958,13 @@ msgid "Open [state in sale_opportunity_workflow]"
 msgstr "Ouvert"
 
 msgid "Open [state in ticket_workflow]"
-msgstr "Ouvert"
+msgstr "Ouverte"
 
 msgid "Open the account and helps input transactions on it"
 msgstr "Permet d'ouvrir un compte et d'y ajouter des transactions."
 
 msgid "Opened [state in ticket_workflow]"
-msgstr "Ouvert"
+msgstr "Ouverte"
 
 msgid "Opening Balance"
 msgstr "Soldes Initiaux"
@@ -11803,6 +11803,9 @@ msgstr "Soumis"
 msgid "Submitted [state in sale_opportunity_workflow]"
 msgstr "Soumis"
 
+msgid "Submitted [state in ticket_workflow]"
+msgstr "Soumise"
+
 msgid "Subpages"
 msgstr "Sous-pages"
 
@@ -11993,7 +11996,7 @@ msgid "Suspended [state in project_workflow]"
 msgstr "Suspendu"
 
 msgid "Suspended [state in ticket_workflow]"
-msgstr "Suspendu"
+msgstr "Suspendue"
 
 msgid "Symbol"
 msgstr "Symbole"
