officejs_support_request_ui: updates to stop using unsafe CSP
 - switch to programmatic creation of DOM element using domsugar
  instead of using handlebars which needs CSP
 - use gadget_html_viewer to display post contents
 - more translation support

--- a/bt5/erp5_l10n_fr/MessageTranslationTemplateItem/fr/erp5_ui/translation.po
+++ b/bt5/erp5_l10n_fr/MessageTranslationTemplateItem/fr/erp5_ui/translation.po
@@ -1405,6 +1405,12 @@ msgstr "Attacher un document"
 msgid "Attachment"
 msgstr "Pièce jointe"
 
+msgid "Attachment:"
+msgstr "Pièce jointe:"
+
+msgid "Attachment: "
+msgstr "Pièce jointe: "
+
 msgid "Attachments"
 msgstr "Pièces jointes"
 
@@ -1896,6 +1902,9 @@ msgstr "Le business template a été mis à jour avec succès"
 
 msgid "Buyer"
 msgstr "Acheteur"
+
+msgid "By"
+msgstr "Par"
 
 msgid "CAD Library"
 msgstr "Nom du fichier Lectra"
@@ -2721,6 +2730,9 @@ msgstr "Commentaires entrés par un utilisateur. Les commentaires ne seront visi
 
 msgid "Comments which can be read by internal users but which, unlike description, are not printed out on official documents."
 msgstr "Commentaires accessibles aux utilisateurs internes de l'application qui, contrairement à la description, ne sont pas repris ou imprimés sur les documents officiels."
+
+msgid "Comments:"
+msgstr "Commentaires:"
 
 msgid "Compare"
 msgstr "Comparer"
@@ -6586,6 +6598,9 @@ msgstr "Dernier"
 msgid "Last In, First Out"
 msgstr "Dernier entré, premier sorti"
 
+msgid "Last Month Activity"
+msgstr "Activité du mois"
+
 msgid "Last Name"
 msgstr "Nom"
 
@@ -10309,6 +10324,9 @@ msgstr "Hiérarchie d'expression de besoins"
 msgid "Reset"
 msgstr "Réinitialiser"
 
+msgid "Reset Filter"
+msgstr "Réinitialiser le filtre"
+
 msgid "Reset List Setting"
 msgstr "Réinitialiser la configuration de la liste"
 
@@ -11740,6 +11758,9 @@ msgstr "Soumettre au manager (action)"
 msgid "Submit Message"
 msgstr "Soumettre le message"
 
+msgid "Submit New Support Request"
+msgstr "Soumettre une nouvelle demande d'assistance"
+
 msgid "Submit Project"
 msgstr "Soumettre le projet"
 
@@ -11905,6 +11926,9 @@ msgstr "Rapport détaillé"
 msgid "Support Request Module"
 msgstr "Module des demandes d'assistance"
 
+msgid "Support Request Pipe"
+msgstr "Demandes d'assistance en cours"
+
 msgid "Support Request Status"
 msgstr "État"
 
@@ -11916,6 +11940,9 @@ msgstr "Reference du type de la demande d'assistance"
 
 msgid "Support Request Types"
 msgstr "Types des demandes d'assistance"
+
+msgid "Support Request WorkLists"
+msgstr "Listes de travail des demandes d'assistance"
 
 msgid "Support Requests"
 msgstr "Demandes d'assistance"
