erp5_l10n_fr: add translation for the renderjs UI

--- a/bt5/erp5_l10n_fr/MessageTranslationTemplateItem/fr/erp5_ui/translation.po
+++ b/bt5/erp5_l10n_fr/MessageTranslationTemplateItem/fr/erp5_ui/translation.po
@@ -6901,6 +6901,9 @@ msgstr "Délai max. (jours)"
 msgid "Max. delay (day)"
 msgstr "Délai Max (jours)"
 
+msgid "Maximize"
+msgstr "Agrandir"
+
 msgid "Maximum Date"
 msgstr "Date maximale"
 
